01-18-2019/Lab-2
IF

>>> a=10
>>> if a:
... print("Printing the variable value: ")
  File "<stdin>", line 2
    print("Printing the variable value: ")
        ^
IndentationError: expected an indented block
>>> if a:
...     print("Printing the variable value: ")
...     print(a)
... 
Printing the variable value: 
10

